[package]
name = "seq_tag_finder"
version = "0.0.1"
authors = ["Utsab Ray <utsab.ray@scale.bio>"]
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
csv = "1.1"
json = "0.12"
flate2 = { version = "=1.0.25", features = ["zlib-ng-compat"], default-features = false }
rust-htslib = { version = "0.50", default-features = false }
tempfile = "3.20.0"
